Fix overflow

--- a/src/components/icon/IconListUsers.scss
+++ b/src/components/icon/IconListUsers.scss
@@ -1,6 +1,7 @@
 @import 'src/variables';
 
 .icon-list-users {
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
